# c_practice

CPython/: CMakeLists.txt  digit_sum_c.py  digit_sum_module.c  digit_sum_p.py  setup.py
digest/: CMakeLists.txt  Makefile  calculate.c  calculate.h  main.c  print.c  print.h  structure.h
eulerianPath/: CMakeLists.txt  main.c
extJoin/: CMakeLists.txt
extSort/: CMakeLists.txt
fork_vfork/: CMakeLists.txt  fork.c  vfork.c
matrix_multiplayer/: main.c
matrix_transpose/: CMakeLists.txt  main.c
myfloat/: CMakeLists.txt  README.md  main.c
pipeline/: CMakeLists.txt  main.c
std::vector/: CMakeLists.txt  README.md  main.c  vector12
wc/: CMakeLists.txt  main.c
